tests/invalid/annotation_callable_wrong_arity/main.py
def bad(x: callable[[int], int, int]) -> None:
    x


def main() -> None:
    y: int = 0
